[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyzcash"
version = "0.1.0a1"
description = "Python bindings for librustzcash"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyzcash._pyzcash"
